--- a/frontend/app/src/main/res/values/strings.xml
+++ b/frontend/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="title_map">Map</string>
     <string name="title_feed">Feed</string>
     <string name="title_settings">Settings</string>
+    <string name="register_plant">Register Plant</string>
+    <string name="register_default_text">Enter facts about plant here (optional)</string>
 </resources>
