--- a/frontend/app/src/main/res/values/strings.xml
+++ b/frontend/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="title_settings">Settings</string>
     <string name="register_plant">Register Plant</string>
     <string name="register_default_text">Enter facts about plant here (optional)</string>
+    <string name="cancel_text">Cancel</string>
 </resources>
