--- a/frontend/app/src/main/res/values/strings.xml
+++ b/frontend/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="title_feed">Feed</string>
     <string name="title_settings">Settings</string>
     <string name="register_plant">Register Plant</string>
-    <string name="register_default_text">Enter facts about plant here (optional)</string>
+    <string name="register_description_default_text">Plant description (optional)</string>
+    <string name="register_plant_name_default_text">Plant Name</string>
     <string name="cancel_text">Cancel</string>
 </resources>
