Added report button

--- a/frontend/app/src/main/res/values/strings.xml
+++ b/frontend/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="cancel_text">Cancel</string>
     <string name="back_text">Back</string>
     <string name="submission_posted_by_text">Posted by %1$s on %2$s</string>
+    <string name="report_text">Report</string>
 </resources>
